// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`search utils filterByRange removes results correctly 1`] = `Array []`;

exports[`search utils filterByRange removes results correctly 2`] = `
Array [
  Object {
    "ref": "foo",
  },
]
`;

exports[`search utils filterByRange removes results correctly 3`] = `
Array [
  Object {
    "ref": "foo",
  },
  Object {
    "ref": "bar",
  },
]
`;

exports[`search utils filterByRange removes results correctly 4`] = `
Array [
  Object {
    "ref": "bar",
  },
]
`;

exports[`search utils filterByRange removes results correctly 5`] = `Array []`;

exports[`search utils queries queryAvailable returns preferred query string 1`] = `" +availableForOnlineBooking:true^15"`;

exports[`search utils queries queryFilterRegions returns built or string 1`] = `" -region:Bar"`;

exports[`search utils queries queryFilterRegions returns built or string 2`] = `" -region:Foo  OR   -region:Boo"`;

exports[`search utils queries queryFilterStarRatings returns built or string 1`] = `" -starRating:Bar"`;

exports[`search utils queries queryFilterStarRatings returns built or string 2`] = `" -starRating:Foo  OR   -starRating:Boo"`;

exports[`search utils queries queryHoneymooners returns preferred query string 1`] = `undefined`;

exports[`search utils queries queryHoneymooners returns preferred query string 2`] = `" suitableForHoneymooners:true^5"`;

exports[`search utils queries queryPreferred returns preferred query string 1`] = `" preferred:true"`;

exports[`search utils searchByQueries returns the result set based on querys 1`] = `
Array [
  Object {
    "matchData": Object {
      "metadata": Object {},
    },
    "ref": "undefined",
    "score": 0,
  },
]
`;

exports[`search utils searchByQueries returns the result set based on querys 2`] = `
Array [
  Object {
    "matchData": Object {
      "metadata": Object {
        "on": Object {
          "foo": Object {},
        },
      },
    },
    "ref": "undefined",
    "score": 0,
  },
]
`;

exports[`search utils searchByQueries returns the result set based on querys 3`] = `
Array [
  Object {
    "matchData": Object {
      "metadata": Object {
        "two": Object {
          "foo": Object {},
        },
      },
    },
    "ref": "undefined",
    "score": 0.693,
  },
]
`;
